welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var T = new Array[Color](getMondeHauteur)

for(i<- 0 to getMondeHauteur-1){
	getCouleurSol();
	T(i)=getCouleurSol;
	avance();}

var T2 = new Array[Int](getMondeLargeur-1)
gauche();
avance();
for(i<- 0 to getMondeLargeur-2){avance();litMessage();T2(i)=litMessage}
}
